<resources>
    <string name="app_name">蚂蚁团队</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="home">首页</string>
    <string name="reminder">提醒</string>
    <string name="toggle_open">打开</string>
    <string name="toggle_close">关闭</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="logout">登出</string>
    <string name="setting">设置</string>
    <string name="notebook">备忘录</string>
    <string name="completed_case">已完成事项</string>
    <string name="feedback">反馈</string>
    <string name="exit">退出</string>
    <string name="title_activity_welcome">WelcomeActivity</string>
    <string name="title_activity_setting">SettingActivity</string>
    <string name="setting_general">通用</string>
    <string name="setting_receive_alarm">接收新消息通知</string>
    <string name="setting_sound">声音</string>
    <string name="setting_vibration">振动</string>
    <string name="setting_about">关于</string>
</resources>
