<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_home_black_36dp"
            android:title="@string/home" />
        <item
            android:id="@+id/nav_reminder"
            android:icon="@drawable/ic_alarm_on_black_36dp"
            android:title="@string/reminder" />
        <item
            android:id="@+id/nav_notebook"
            android:icon="@drawable/ic_book_black_36dp"
            android:title="@string/notebook"/>
        <item
            android:id="@+id/nav_completed"
            android:icon="@drawable/ic_done_all_black_36dp"
            android:title="@string/completed_case"/>
        <item
            android:id="@+id/nav_feedback"
            android:icon="@drawable/ic_mood_black_36dp"
            android:title="@string/feedback"/>
    </group>

    <item
        android:title="">
        <menu>
            <item
                android:id="@+id/action_settings"
                android:title="@string/setting" />
            <item
                android:id="@+id/action_exit"
                android:title="@string/exit" />
        </menu>
    </item>
</menu>